force-app/main/default/objects/Patient__c/Patient__c.object-meta.xml
<CustomObject>
  <label>Patient</label>
  <pluralLabel>Patients</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Patient Name</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>