force-app/main/default/objects/Patient__c/fields/Care_Notes__c.field-meta.xml
<CustomField>
  <fullName>Care_Notes__c</fullName>
  <label>Care Notes</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>