force-app/main/default/objects/Patient__c/fields/MRN__c.field-meta.xml
<CustomField>
  <fullName>MRN__c</fullName>
  <externalId>true</externalId>
  <unique>true</unique>
  <label>MRN</label>
  <length>30</length>
  <type>Text</type>
</CustomField>