force-app/main/default/objects/Patient__c/fields/Primary_Email__c.field-meta.xml
<CustomField>
  <fullName>Primary_Email__c</fullName>
  <label>Primary Email</label>
  <type>Email</type>
</CustomField>